<resources>
    <string name="app_name">PetsWorld</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="facebook_app_id">277907539289841</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="myAlphaNumeric">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="myPhoneNumberic">+0123456789</string>
    <string name="title_activity_place_post">PlacePostActivity</string>
    <string name="loginname">Tên đăng nhập</string>
    <string name="login_button">Đăng Nhập</string>
    <string name="register_button">Đăng Ký</string>
    <string name="login_password">Mật khẩu</string>
    <string name="login_failed">Đăng nhập thất bại</string>
    <string name="login_successed">Đăng nhập thành công</string>
    <string name="register_tittle">Đăng Ký</string>
    <string name="register_confirmpassword">Xác nhận mật khẩu</string>
    <string name="error_length_input_register">Tên đăng nhập và mật khẩu phải dài trên 6 ký tự</string>
    <string name="error_password_notequal_register">Mật khẩu xác nhận phải trùng với mật khẩu</string>
    <string name="register_successed">Đăng ký thành công</string>
    <string name="register_failed">Tên đăng nhập đã có người sử dụng</string>
    <string name="quit">Thoát</string>
    <string name="error_connection">Thao tác thất bại, kiểm tra lại kết nối mạng</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="pet_name">Tên thú nuôi</string>
    <string name="insertpetinfo_tittle">Thêm thông tin thú nuôi</string>
    <string name="pet_type">Loại vật nuôi</string>
    <string name="pet_vacines">Tiêm chủng</string>
    <string name="post_description">Mô tả</string>
    <string name="post_requirement">Yêu cầu</string>
    <string name="pet_info">Thông tin thú nuôi</string>
    <string name="OK">Hoàn Tất</string>
    <string name="error_input">Không được bỏ trống</string>
    <string name="error_empty_pettype">Xin chọn loại vật nuôi</string>
    <string name="upload_post">Đăng bài</string>
    <string name="error_photo_numbers">Phải thêm ít nhất 1 hình thú nuôi</string>
    <string name="error_not_insert_petinfo">Phải thêm thông tin thú nuôi</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="old_passworld">Mật khẩu cũ</string>
    <string name="new_passworld">Mật khẩu mới</string>
    <string name="error_input_password">Mật khẩu không đúng</string>
    <string name="changepassword_successed">Đổi mật khẩu thành công</string>
    <string name="report">Gửi báo cáo bài đăng</string>
    <string name="contact">Xem thông tin liên lạc</string>
    <string name="pet_vaccinedate">Ngày tiêm chủng</string>
    <string name="findowner">Tìm người nuôi</string>
    <string name="findpet">Tìm thú nuôi</string>
    <string name="findpetlost">Tìm thú nuôi thất lạc</string>
    <string name="delete">Xóa</string>
    <string name="update_post">Chỉnh sửa</string>
    <string name="searchlayouttittle">Tìm kiếm theo loại vật nuôi</string>
    <string name="googlemapkey">AIzaSyDaGTnVy_mjRPRycQ8JTd-tJOTyw4AcYrQ</string>
    <string name="location_input">Chọn vị trí</string>
    <string name="error_not_insert_address">Bạn chưa chọn vị trí</string>
    <string name="search_distance">Tìm trong phạm vi (km)</string>
    <string name="save_login">Lưu đăng nhập</string>
</resources>
