<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/activity_register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    tools:context="com.minhtam.petsworld.Activity.RegisterActivity">

    <TextView
        android:layout_marginBottom="20dp"
        android:textSize="40sp"
        android:text="@string/register_tittle"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtRegisterUsername"
                android:hint="@string/loginname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtRegisterPassword"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtRegisterPasswordConfirm"
                android:hint="@string/register_confirmpassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnRegisterOK"
            android:text="@string/register_button"
            android:textColor="@color/white"
            android:background="@drawable/roundedbutton_green_light"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <Button
            android:id="@+id/btnRegisterQuit"
            android:text="@string/quit"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:background="@drawable/roundedbutton_green"/>

    </LinearLayout>

</LinearLayout>
