<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:background="@color/background_group"
        android:id="@+id/tvDialogItemDetailReport"
        android:textColor="@color/text_msg_input"
        android:textAlignment="center"
        android:text="@string/report"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:background="@color/background_group"
        android:id="@+id/tvDialogItemDetailContact"
        android:textColor="@color/text_msg_input"
        android:textAlignment="center"
        android:text="@string/contact"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:background="@color/background_group"
        android:id="@+id/tvDialogItemDetailEditPost"
        android:textColor="@color/text_msg_input"
        android:textAlignment="center"
        android:text="@string/edit"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:background="@color/background_group"
        android:id="@+id/tvDialogItemDetailDeletePost"
        android:textColor="@color/text_msg_input"
        android:textAlignment="center"
        android:text="@string/delete"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>