<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.minhtam.petsworld.Activity.InsertPetInfoActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </include>

    <LinearLayout
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/text_msg_input"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:text="@string/insertpetinfo_tittle"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:textSize="15sp"
            android:id="@+id/edtInsertPetInfoName"
            android:hint="@string/pet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:textSize="15sp"
            android:text="@string/pet_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:textSize="15sp"
            android:text="@string/pet_vacines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ExpandableListView
            android:layout_marginTop="10dp"
            android:id="@+id/exlvInsertPetInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ExpandableListView>

        <Button
            android:id="@+id/btnInsertPetInfoOK"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/OK"
            android:background="@drawable/roundedbutton_bluelight"
            android:layout_width="100dp"
            android:layout_height="50dp" />
    </LinearLayout>


</LinearLayout>
