<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/body_background"
    android:gravity="center">

    <TextView
        android:layout_marginBottom="20dp"
        android:text="Đăng Nhập"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTittleLogin"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtLoginUserName"
            android:hint="@string/loginname"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtLoginUserPassword"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:shadowColor="@color/transparent"
        android:id="@+id/btnLogin"
        android:layout_marginTop="15dp"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:background="@drawable/roundedbutton"
        android:layout_width="250dp"
        android:layout_height="40dp" />

    <Button
        android:shadowColor="@color/transparent"
        android:id="@+id/btnRegister"
        android:layout_marginTop="10dp"
        android:text="@string/register_button"
        android:textColor="@color/white"
        android:background="@drawable/roundedbutton_bluelight"
        android:layout_width="250dp"
        android:layout_height="40dp" />


</LinearLayout>