<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_background_gray"
    tools:context="com.minhtam.petsworld.Fragment.UserInformationFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="Trang cá nhân"
                android:padding="5dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:background="@color/body_background_gray"
                android:textAlignment="center"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <include layout="@layout/layout_user_information">
                </include>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/body_background_gray"
                android:gravity="center">

                <Button
                    android:id="@+id/btnUserInfor_ChangePassword"
                    android:text="@string/change_password"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/roundedbutton_bluelight"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="10dp"
                android:background="@color/com_facebook_button_send_background_color_pressed"
                android:divider="@color/title_gray"
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvUserInformation_FindOwnerPost"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:text="@string/findowner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvUserInformation_FindPetPost"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:text="@string/findpet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvUserInformation_FindPetLostPost"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:text="@string/findpetlost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/layoutListPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
