<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_background_gray"
    tools:context="com.minhtam.petsworld.Fragment.FindPetsFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainerFindPet"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_Post_FindPets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/background_group"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="7dp">

                <ImageView
                    android:id="@+id/imvFindPets_userimage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/tvFindPets_userPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="Đăng tin để tìm vật nuôi"
                    android:paddingLeft="10dp"
                    android:textSize="16sp"
                    android:textColorHint="@color/text_msg_input" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_gravity="center"
                        android:id="@+id/btnSearchFindPet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_search" />

                    <TextView
                        android:paddingStart="20dp"
                        android:gravity="center_vertical"
                        android:id="@+id/tvSearchFindPet"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/searchlayouttittle"
                        android:textAllCaps="false"
                        android:textColor="@color/text_msg_input"
                        android:textSize="16sp"
                        android:textStyle="italic" />
                </LinearLayout>

                <EditText
                    android:visibility="gone"
                    android:id="@+id/edtDistanceSearch_FindPet"
                    android:hint="@string/search_distance"
                    android:digits="@string/myPhoneNumberic"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:paddingStart="15dp"
                    android:textSize="15sp"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <ExpandableListView
                    android:id="@+id/exlvFindPetPettype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:keepScreenOn="true"
                    android:scrollbars="vertical"
                    android:visibility="gone">
                </ExpandableListView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvFindPets_Post"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </android.support.v7.widget.RecyclerView>

            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/footer_progress"
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
        </include>
    </android.support.v4.widget.SwipeRefreshLayout>





</FrameLayout>
